Delete 'FullCollectionLike' and 'FullSeqLike'